iota.log
*** Error compiling 'iota/command_line/iota_bulletproof.py'...
  File "iota/command_line/iota_bulletproof.py", line 32
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/command_line/iota_single_image.py'...
  File "iota/command_line/iota_single_image.py", line 163
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_cctbx.py'...
  File "iota/components/iota_cctbx.py", line 286
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_dials.py'...
  File "iota/components/iota_dials.py", line 54
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_input.py'...
  File "iota/components/iota_input.py", line 384
    except Sorry,e:
                ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_threads.py'...
  File "iota/components/iota_threads.py", line 764
    os.chmod(autoindex_filename, 0755)
                                    ^
SyntaxError: invalid token

*** Error compiling 'iota/components/iota_utils.py'...
  File "iota/components/iota_utils.py", line 610
    except Exception, e:
                    ^
SyntaxError: invalid syntax

